多范围采用流